# Agentic-Ads

./: .env  .gitignore  README.md  SETUP.md  TECHNICAL_WRITEUP.md  ad_copy_agent.py  app.py  architecture.md  contributing.md  features.md  feedback_summarizer.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tech-stack.md  tsconfig.json  vite.config.ts
backend/: .dockerignore  .env.example  DOCKER_README.md  Dockerfile  __init__.py  debug_hf.py  docker-compose.yml  main.py  nginx.conf  requirements.txt  test_models.py
backend/chroma_db/: chroma.sqlite3
backend/mongo-init/: init.js
backend/rag/: __init__.py  agents.py  chunking.py  config.py  enhanced_vector_store.py  feedback_insights.py  graph.py  knowledge_base.py  poster_generation.py  text_generation.py  vector_store.py  video_generation.py
chroma_db/: chroma.sqlite3
feedback_chroma_db/: chroma.sqlite3
src/: App.css  App.tsx
src/components/AdminLogin/: AdminLogin.css  AdminLogin.tsx
src/components/FeedbackModal/: FeedbackModal.css  FeedbackModal.tsx
src/components/Navigation/: Navigation.css  Navigation.tsx
src/components/ui/: Button.css  Button.tsx  FormGroup.css  FormGroup.tsx  Input.css  Input.tsx  Modal.css  Modal.tsx
src/hooks/: useAdGeneration.ts  useAdminAuth.ts  useApiData.ts  useAppState.ts  useDataState.ts  useFeedbackHandler.ts
src/pages/ActivityPage/: ActivityPage.css  (+1 more)
src/styles/: index.css
src/types/: index.ts
static/: style.css
templates/: feedback_list.html  feedback_success.html  health.html  index.html  rag_docs.html
(+8 files in other folders)
