[project]
name = "zocket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=23.3.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.4",
    "fastapi[standard]>=0.100.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "jinja2>=3.1.2",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=0.0.5",
    "langgraph>=0.0.15",
    "mypy>=1.3.0",
    "numpy>=1.24.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.0.0",
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "uvicorn>=0.22.0",
]
